<resources>
    <string name="app_name">FitYard</string>
    <string name="hello">Image</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="view_profile">View Profile</string>
    <string name="add">Add</string>
    <string name="ID">ID</string>
    <string name="LastName">Last Name</string>
    <string name="FirstName">First Name</string>
    <string name="my_name_is_rifaa_juhan_i_am_in_my_third_year_of_university">My name is Rifaa Juhan. I am in my third year of university.</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="content_description_media" />
    <string name="DietPlans">Diet Plans</string>
    <string name="NutritionGuide"> Nutrition Guide</string>
    <string name="workout">Workout</string>
    <string name="BMICalculator">BMI Calculator</string>
    <string name="healthTips">ic_healthTips</string>
    <string name="userProfile">ic_userProfile</string>
    <string name="remainders">ic_remaider</string>
</resources>