<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/firstname"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="130dp"
        android:hint="@string/FirstName"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="210dp"
        android:autofillHints=""
        android:cursorVisible="true"
        android:hint="@string/LastName"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:hint="@string/ID"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="373dp"
        android:layout_height="249dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="420dp"
        android:hint="@string/textview"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewProfile"
        android:layout_width="109dp"
        android:layout_height="58dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#F3EFEF"
        android:text="@string/view_profile"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/insert"
        android:layout_width="103dp"
        android:layout_height="59dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="320dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/add"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>