<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.cardview.widget.CardView
        android:id="@+id/welcomeCard"
        android:layout_width="382dp"
        android:layout_height="174dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="544dp"
        android:paddingStart="50dp"
        android:paddingLeft="50dp"
        android:paddingTop="50dp"
        android:paddingEnd="50dp"
        app:barrierMargin="0dp"
        app:cardBackgroundColor="#DF876C"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="106dp"
            android:layout_height="56dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/welcomeText" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dietPlans"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:background="@color/reddishBlack"
        app:cardBackgroundColor="#8C7D7D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeCard">


        <ImageView
            android:id="@+id/dietPlansImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/content_description_media"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/diet_plans" />

        <TextView
            android:id="@+id/dietPlansCard"
            android:layout_width="144dp"
            android:layout_height="44dp"
            android:layout_marginTop="100dp"
            android:paddingTop="3dp"
            android:text="@string/DietPlans"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/dietPlans"
            app:layout_constraintTop_toTopOf="@+id/dietPlans" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/nutritionGuide"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:background="@color/reddishBlack"
        app:cardBackgroundColor="#8C7D7D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeCard">

        <ImageView
            android:id="@+id/nutritionGuideImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/content_description_media"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/nutrition_guide" />

        <TextView
            android:id="@+id/nutritionGuideCard"
            android:layout_width="144dp"
            android:layout_height="44dp"
            android:layout_marginTop="100dp"
            android:paddingTop="5dp"
            android:text="@string/NutritionGuide"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/nutritionGuide"
            app:layout_constraintTop_toTopOf="@+id/nutritionGuide" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/workout"
        android:layout_width="144dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/reddishBlack"
        app:cardBackgroundColor="#8C7D7D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dietPlans">

        <ImageView
            android:id="@+id/workoutImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/content_description_media"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/workout" />

        <TextView
            android:id="@+id/workoutCard"
            android:layout_width="144dp"
            android:layout_height="44dp"
            android:layout_marginTop="100dp"
            android:paddingTop="5dp"
            android:text="@string/workout"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FDFDFD"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/workout"
            app:layout_constraintTop_toTopOf="@+id/workout" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/BMICalculator"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@color/reddishBlack"
        app:cardBackgroundColor="#8C7D7D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nutritionGuide">

        <ImageView
            android:id="@+id/BMICalculatorImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/content_description_media"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/weight" />

        <TextView
            android:id="@+id/BMICalculatorCard"
            android:layout_width="144dp"
            android:layout_height="44dp"
            android:layout_marginTop="100dp"
            android:background="#00FFFFFF"
            android:paddingTop="5dp"
            android:text="@string/BMICalculator"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/workout"
            app:layout_constraintTop_toTopOf="@+id/workout" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BMICalculator">


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#9DD3EC"
            app:menu="@menu/bottom_navigation_menu"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="554dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>